<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/RecipeTheme"
    android:padding="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    Subtitle-->
    <TextView
        android:id="@+id/txt_rating_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating_message"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
<!--    Title-->
    <TextView
        android:id="@+id/txt_rating_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/recipe_text_view_padding"
        android:text="@string/rating_question"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_rating_subtitle" />
<!--    Dislike button-->
    <ImageView
        android:id="@+id/btn_rating_dislike"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/background_rating"
        android:contentDescription="@string/rating_dislike_description"
        android:padding="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_rating_like"
        app:layout_constraintTop_toBottomOf="@+id/txt_rating_title"
        app:srcCompat="@drawable/ic_thumb_down_black_24dp" />
<!--    Like button-->
    <ImageView
        android:id="@+id/btn_rating_like"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/background_rating"
        android:contentDescription="@string/rating_like_description"
        android:padding="15dp"
        app:layout_constraintLeft_toRightOf="@+id/btn_rating_dislike"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_rating_title"
        app:srcCompat="@drawable/ic_thumb_up_black_24dp" />
<!--    NeverMind (Exit button)-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_rating_exit"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/rating_close_btn"
        android:textAppearance="@style/TextAppearance.RecipeTheme.Button"
        app:cornerRadius="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_rating_dislike"
        app:strokeColor="@color/colorPrimaryDark" />
</androidx.constraintlayout.widget.ConstraintLayout>