<?xml version="1.0" encoding="utf-8"?>
<!-- Scroll view for the layout -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewXML"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activity.ui.login.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Meal prep text -->
        <TextView
            android:id="@+id/txt_title_name_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="40sp"
            android:fontFamily="cursive"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="60dp"
            />

        <!-- Login Text Fields -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ip_First_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/First_Name"
            app:helperTextTextAppearance="?attr/textAppearanceSubtitle2"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_name_signup"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_First_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="2dp"
                android:textAppearance="?attr/textAppearanceBody1"
                android:scrollHorizontally="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ip_Last_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/Last_Name"
            app:helperTextTextAppearance="?attr/textAppearanceSubtitle2"
            app:layout_constraintTop_toBottomOf="@+id/ip_First_Name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_last_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="2dp"
                android:scrollHorizontally="true"
                android:textAppearance="?attr/textAppearanceBody1"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- email input box -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ip_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:helperText="@string/email_address"
            app:helperTextTextAppearance="?attr/textAppearanceSubtitle2"
            app:layout_constraintTop_toBottomOf="@+id/ip_Last_Name"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="2dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textAppearance="?attr/textAppearanceBody1"
                android:maxLines="1"
                android:lines="1"
                android:scrollHorizontally="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--  password input box -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ip_layout_password_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:helperText="@string/password_valid"
            app:helperTextTextAppearance="?attr/textAppearanceSubtitle2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ip_layout_email"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="2dp"
                android:hint="@string/password"
                android:textAppearance="?attr/textAppearanceBody1"
                android:inputType="textPassword"
                android:scrollHorizontally="true" />
        </com.google.android.material.textfield.TextInputLayout>


        <!--Login button-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@color/button_color"
            android:text="@string/SignUp"
            android:textAllCaps="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ip_layout_password_signup" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>