<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="org.dal.mc.optimus.activity.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"
        >
        <action
            android:id="@+id/action_navigation_home_to_searchFragment"
            app:destination="@id/searchFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="org.dal.mc.optimus.activity.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_my_recipe"
        android:name="org.dal.mc.optimus.activity.ui.myrecipe.MyRecipeFragment"
        android:label="@string/title_my_recipe"
        tools:layout="@layout/fragment_my_recipe" />

    <fragment
        android:id="@+id/navigation_my_signIn"
        android:name="org.dal.mc.optimus.activity.ui.login.LogInFragment"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/navigation_my_signUp"
        android:name="org.dal.mc.optimus.activity.ui.login.SignUpFragment"
        tools:layout="@layout/fragment_signup" />

    <fragment
        android:id="@+id/navigation_my_forgot_password"
        android:name="org.dal.mc.optimus.activity.ui.login.ForgotPasswordFragment"
        tools:layout="@layout/fragment_forgot_password" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="org.dal.mc.optimus.activity.ui.home.SearchFragment"
        android:label="SearchFragment" >
        <action
            android:id="@+id/action_searchFragment_to_searchResultFragment"
            app:destination="@id/searchResultFragment" />
        <action
            android:id="@+id/action_searchFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/searchResultFragment"
        android:name="org.dal.mc.optimus.activity.ui.home.SearchResultFragment"
        android:label="SearchResultFragment" >
        <action
            android:id="@+id/action_searchResultFragment_to_searchFragment"
            app:destination="@id/searchFragment" />
    </fragment>

</navigation>