<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?android:attr/actionBarSize"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/layout_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#FFFFFF"
        app:liftOnScroll="true"
        android:focusableInTouchMode="true"
        >

        <EditText
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_item_margin"
            android:background="@drawable/background_search"
            android:drawableStart="@drawable/ic_search"
            android:drawableLeft="@drawable/ic_search"
            android:hint="@string/search_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="@dimen/main_item_margin"
            android:gravity="center" />

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/layout_nested"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_app_bar"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_constraint_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/img_main_recipe"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_margin="@dimen/main_item_margin"
                android:contentDescription="@string/home_image_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/layout_constraint_1" />
<!--            Text on Image view-->
            <TextView
                android:id="@+id/txt_main_recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/main_item_margin"
                android:gravity="center"
                android:padding="@dimen/recipe_text_view_padding"
                android:text="@string/home_image_title"
                android:textAppearance="?attr/textAppearanceHeadline4"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="@+id/img_main_recipe"
                tools:layout_editor_absoluteX="10dp" />

            <TextView
                android:id="@+id/txt_main_recipe_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.6"
                android:background="@drawable/background_img_text"
                android:padding="12dp"
                android:textAppearance="@style/TextAppearance.RecipeTheme.Headline4"
                app:layout_constraintBottom_toBottomOf="@+id/img_main_recipe"
                tools:layout_editor_absoluteX="10dp" />
<!--            Category 1 Headline-->
            <TextView
                android:id="@+id/txt_category1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/main_item_margin"
                android:padding="@dimen/recipe_text_view_padding"
                android:text="@string/home_title1"
                android:textAppearance="@style/TextAppearance.RecipeTheme.Subtitle1.Accent"
                app:layout_constraintTop_toBottomOf="@id/img_main_recipe"
                tools:layout_editor_absoluteX="10dp" />
        <!--    List of Recipe of Category 1-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_recent_recipe1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_category1"
                app:layout_constraintLeft_toLeftOf="parent"
                />
<!--            Category 2 Headline-->
            <TextView
                android:id="@+id/txt_category2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/main_item_margin"
                android:padding="@dimen/recipe_text_view_padding"
                android:text="@string/home_title2"
                android:textAppearance="@style/TextAppearance.RecipeTheme.Subtitle1.Accent"
                app:layout_constraintTop_toBottomOf="@id/list_recent_recipe1"
                tools:layout_editor_absoluteX="10dp" />
            <!--    List of Recipe of Category 2-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_recent_recipe2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/txt_category2"
                app:layout_constraintLeft_toLeftOf="parent"
                />
<!--            Category 3 Headline-->
            <TextView
                android:id="@+id/txt_category3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/main_item_margin"
                android:padding="@dimen/recipe_text_view_padding"
                android:text="@string/recent"
                android:textAppearance="@style/TextAppearance.RecipeTheme.Subtitle1.Accent"
                app:layout_constraintTop_toBottomOf="@id/list_recent_recipe2"
                tools:layout_editor_absoluteX="10dp" />
    <!--        List of Recipe of Category 4-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_recent_recipe4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="@dimen/main_item_margin"
                android:layout_marginRight="@dimen/main_item_margin"
                app:layout_constraintTop_toBottomOf="@+id/txt_category3"
                app:layout_constraintLeft_toLeftOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>